# Websocket-CocosCreator

./: .gitignore  LICENSE  README.en.md  README.md  package-lock.json  package.json
assets/Animations/: oneStep.anim  twoStep.anim
assets/Material/: panda_material.mtl
assets/Scenes/: Main.scene
assets/Scipts/: GameManager.ts  PlayerController.ts  goeasy-2.5.15.min.d.ts  goeasy-2.5.15.min.js  goeasy-2.6.1.min.d.ts  goeasy-2.6.4.min.js  goeasy-2.7.2.min.js  type.d.ts
native/engine/android/: CMakeLists.txt
native/engine/android/app/: AndroidManifest.xml
native/engine/android/app/assets/: main.js
native/engine/android/app/assets/assets/main/: config.bb4ee.json  index.bb4ee.js
native/engine/android/app/assets/assets/main/import/06/: 06e1beaf1.e57f3.json
native/engine/android/app/assets/assets/main/import/0f/: 0fcc58425.a6492.json
native/engine/android/app/assets/src/: application.aa80b.js  settings.42984.json
native/engine/android/app/assets/src/chunks/: bundle.js
native/engine/android/app/assets/src/cocos-js/: cc.js
native/engine/android/instantapp/: AndroidManifest.xml  build.gradle
native/engine/android/res/values/: strings.xml
